Added 'urlize' template tag to notes in search results template

--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -109,7 +109,7 @@
                                             <br>
                                             <div class="table-muted-text">
                                                 ＜備考＞<br>
-                                                {{ item.notes|linebreaksbr }}
+                                                {{ item.notes|linebreaksbr|urlize }}
                                             </div>
                                         {% endif %}
                                     {% else %}
