"インポート" changed to "アップロード"

--- a/templates/glossary_upload.html
+++ b/templates/glossary_upload.html
@@ -11,7 +11,7 @@
             <div class="card">
 
                 <div class="card-header">
-                    用語集をインポートする
+                    用語集をアップロードする
                 </div>
 
                 <div class="card-body">
@@ -28,7 +28,7 @@
                         <div class="text-center mt-4">
                             <a href="#" data-bs-toggle="modal" data-bs-target="#uploadHelpModal" class="btn btn-secondary btn-sm" role="button">ヘルプ</a>
                             <button type="submit" name="cancel" class="btn btn-secondary btn-sm mx-2">キャンセル</button>
-                            <button type="submit" class="btn btn-primary btn-sm">インポート</button>
+                            <button type="submit" class="btn btn-primary btn-sm">アップロード</button>
                         </div>
 
                     </form>
@@ -40,7 +40,7 @@
                             <div class="modal-content">
 
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel">インポートヘルプ</h5>
+                                    <h5 class="modal-title" id="exampleModalLabel">アップロードヘルプ</h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
 
@@ -62,7 +62,7 @@
                                 </div>
 
                                 <div class="modal-footer">
-                                    <button type="button" class="btn btn-outline-primary" data-bs-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-primary btn-sm" data-bs-dismiss="modal">閉じる</button>
                                 </div>
 
                             </div>
