--- a/templates/translation_upload.html
+++ b/templates/translation_upload.html
@@ -11,7 +11,7 @@
             <div class="card mb-5">
 
                 <div class="card-header">
-                    翻訳をインポートする
+                    翻訳をアップロードする
                 </div>
 
                 <div class="card-body">
@@ -30,7 +30,7 @@
                         <!-- Cancel and upload buttons -->
                         <div class="text-center mt-4">
                             <button type="submit" name="cancel" class="btn btn-secondary btn-sm mx-2">キャンセル</button>
-                            <button type="submit" class="btn btn-primary btn-sm">インポート</button>
+                            <button type="submit" class="btn btn-primary btn-sm">アップロード</button>
                         </div>
 
                     </form>
