--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,8 +12,8 @@
 
             <li><a class="dropdown-item" href="{% url 'glossary_create' %}?previous_url={{ request.get_full_path|urlencode }}">用語集を作成する</a></li>
             <li><a class="dropdown-item" href="{% url 'entry_create' %}?previous_url={{ request.get_full_path|urlencode }}">用語集エントリーを作成する</a></li>
-            <li><a class="dropdown-item" href="{% url 'glossary_upload' %}?previous_url={{ request.get_full_path|urlencode }}">用語集をインポートする</a></li>
-            <li><a class="dropdown-item" href="{% url 'translation_upload' %}?previous_url={{ request.get_full_path|urlencode }}">翻訳をインポートする</a></li>
+            <li><a class="dropdown-item" href="{% url 'glossary_upload' %}?previous_url={{ request.get_full_path|urlencode }}">用語集をアップロードする</a></li>
+            <li><a class="dropdown-item" href="{% url 'translation_upload' %}?previous_url={{ request.get_full_path|urlencode }}">翻訳をアップロードする</a></li>
             <!--
             {% comment %}
             <li><a class="dropdown-item" href="{% url 'glossary_export' %}?previous_url={{ request.get_full_path|urlencode }}">用語集をエクスポートする</a></li>
