Added urlize to glossary detail template

--- a/templates/glossary_detail.html
+++ b/templates/glossary_detail.html
@@ -142,7 +142,7 @@
                                         <br>
                                         <div class="table-muted-text">
                                             ＜備考＞<br>
-                                            {{ item.notes|linebreaksbr }}
+                                            {{ item.notes|linebreaksbr|urlize }}
                                         </div>
                                     {% endif %}
                             </td>
