--- a/templates/base.html
+++ b/templates/base.html
@@ -22,22 +22,27 @@
         <div class="container-fluid">
             <div class="row">
 
-                <!-- Navigation sidebar -->
+                    <!-- Navigation bar -->
+                    {% if user.is_authenticated %}
+                        {% include "navbar.html" %}
+                    {% endif %}
 
-                {% if user.is_authenticated %}
+                    <!-- Messages -->
+                    {% if messages %}
+                        {% for message in messages %}
 
-                    {% include "navbar.html" %}
+                            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                                {{ message }}
+                                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                            </div>
 
-                {% endif %}
+                        {% endfor %}
+                    {% endif %}
 
-                <div class="col main-col">
-
-                    <div class="main-content">
+                    <div class="col main-col">
                         {% block content %}
                         {% endblock %}
                     </div>
-
-                </div>
 
             </div>
         </div>
