Translation upload messages updated.

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,12 +29,25 @@
 
                     <!-- Messages -->
                     {% if messages %}
-                        <div class="alert alert-warning alert-dismissible fade show text-center" role="alert">
-                        {% for message in messages %}
-                                {{ message }}<br>
+
+                            {% for message in messages %}
+
+                                {% if message.tags == "success" %}
+                                    <div class="alert alert-success alert-dismissible fade show text-center" role="alert">
+                                {% elif message.tags == "warning" %}
+                                    <div class="alert alert-warning alert-dismissible fade show text-center" role="alert">
+                                {% elif message.tags == "error" %}
+                                    <div class="alert alert-danger alert-dismissible fade show text-center" role="alert">
+                                {% else %}
+                                    <div class="alert alert-primary alert-dismissible fade show text-center" role="alert">
+                                {% endif %}
+
+                                        {{ message }}<br>
+                                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                                    </div>
+
                             {% endfor %}
-                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                        </div>
+
                     {% endif %}
 
                     <div class="col main-col">
